<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <FrameLayout
        android:id="@+id/frameLayout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="5dp"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="Profile"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="15dp"
                android:text="Share"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cv_avatar_url"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/txt_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/user_name"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/atar"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/txt_user_full"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/full_name"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_user_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/n_a"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/txt_Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/location"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/n_a"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/txt_user_follower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/follower"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_follower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/_0"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/txt_following_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/following"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/_0"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/public_repository"
                android:textSize="14sp"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/txt_pub_repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/_0"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_gits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/public_gits"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_public_gits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/_0"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/last_update"
                android:textSize="14sp"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/txt_last_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/_11111"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />



        </LinearLayout>

    </ScrollView>


</LinearLayout>