<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_user"
                android:layout_toEndOf="@id/avatar_url"
                android:layout_toRightOf="@id/avatar_url"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txt_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:singleLine="true"
                    android:text="@string/follower"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txt_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:singleLine="true"
                    android:text="@string/following"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/avatar_url"
                android:layout_toRightOf="@id/avatar_url"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="@string/user_name"
                    android:textSize="17sp"
                    android:textStyle="bold" />



                <TextView
                    android:id="@+id/txt_view_on_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="@string/view_on_site"
                    android:textSize="14sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_url"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>


